--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -61,7 +60,7 @@
           <div class="row">
             <div class="col-md-6">
               <h3>Relevant Skills</h3>
-              <p> UX Research | user Surveys and Interviews, Competotive Analysis | User personas | user flows | User Testing | Wireframing | Mocups</p>
+              <p> UX Research | user Surveys and Interviews, Competitive Analysis | User personas | user flows | User Testing | Wireframing | Mockups</p>
             </div>
             <div class="col-md-6">
               <h3>Tools I use</h3>
@@ -81,7 +80,7 @@
     <div class="container">
       <h2>Contact</h2>
       <p>
-        Would you like to discuss oppurtunities? Please get in touch through below social networks. Prefer sending an Email?
+        Would you like to discuss opportunities? Please get in touch through below social networks. Prefer sending an Email?
       </p>
       <div>
         <a href="24by7@careerfoundry.com" class="button contact">SEND ME AN EMAIL</a>
